logs/dag_id=testing/run_id=manual__2022-06-15T08:49:26.948855+00:00/task_id=create_table/attempt=1.log
[2022-06-15 08:49:28,906] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: testing.create_table manual__2022-06-15T08:49:26.948855+00:00 [queued]>
[2022-06-15 08:49:28,930] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: testing.create_table manual__2022-06-15T08:49:26.948855+00:00 [queued]>
[2022-06-15 08:49:28,931] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 08:49:28,933] {taskinstance.py:1357} INFO - Starting attempt 1 of 2
[2022-06-15 08:49:28,934] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 08:49:28,959] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-06-15 08:49:26.948855+00:00
[2022-06-15 08:49:28,965] {standard_task_runner.py:52} INFO - Started process 8805 to run task
[2022-06-15 08:49:28,976] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'testing', 'create_table', 'manual__2022-06-15T08:49:26.948855+00:00', '--job-id', '78', '--raw', '--subdir', 'DAGS_FOLDER/create_table.py', '--cfg-path', '/tmp/tmpip6l2qsr', '--error-file', '/tmp/tmpvfrtdllp']
[2022-06-15 08:49:28,979] {standard_task_runner.py:80} INFO - Job 78: Subtask create_table
[2022-06-15 08:49:29,081] {task_command.py:370} INFO - Running <TaskInstance: testing.create_table manual__2022-06-15T08:49:26.948855+00:00 [running]> on host cfddca254c64
[2022-06-15 08:49:29,302] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=testing
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-15T08:49:26.948855+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-15T08:49:26.948855+00:00
[2022-06-15 08:49:29,363] {base.py:68} INFO - Using connection ID 'postgre_sql' for task execution.
[2022-06-15 08:49:29,399] {dbapi.py:213} INFO - Running statement: 
        DROP TABLE IF EXISTS z1_user;
        CREATE TABLE z1_user(
            user_id SERIAL PRIMARY KEY,
            name VARCHAR(255),
            phonenumber VARCHAR(255),
            email VARCHAR(255),
            address VARCHAR(255),
            work VARCHAR(255),
            other VARCHAR(255),
        ) 
        , parameters: None
[2022-06-15 08:49:29,419] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 11:         ) 
                 ^

[2022-06-15 08:49:29,451] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=testing, task_id=create_table, execution_date=20220615T084926, start_date=20220615T084928, end_date=20220615T084929
[2022-06-15 08:49:29,493] {standard_task_runner.py:97} ERROR - Failed to execute job 78 for task create_table (syntax error at or near ")"
LINE 11:         ) 
                 ^
; 8805)
[2022-06-15 08:49:29,517] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-15 08:49:29,593] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
